Fix section overflow

--- a/app/styles/tags.less
+++ b/app/styles/tags.less
@@ -131,6 +131,7 @@ ul, ol, li {
 }
 
 section {
+  overflow: auto;
   padding: 64px 0;
   position: relative;
 
